{
    "name": "ActionsController",
    "maps": [
        {
            "name": "Items",
            "id": "5db20c7e-7ee7-4e4c-a1a2-ff558f93f2c9",
            "actions": [
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "5c9a6283-c22f-45e3-a5db-f22ab402d098",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "9d084153-9be0-4073-be25-15e4bacf7967",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "c6c7b5ca-57c2-494b-bea2-97edfc3591fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "MoveCamera",
                    "type": "Button",
                    "id": "f248fef4-d9df-4182-bc9c-c8c2a386dcc1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "192a0cda-7644-4235-9dda-3ac4e5bec3dd",
                    "path": "<Touchscreen>/touch0/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53483f4c-5d18-4314-9cc8-fa47a391d7e1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0be096fd-77d4-401f-ad47-7aaf57f63947",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fd0a38d-88f1-439f-b323-a281c4d4e429",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5de9aeb-0cad-460e-90bf-a1b27990056c",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9c97844-8663-430c-88a2-bacdb7e80e0a",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}